fix contrast

--- a/lesson8/css/table.css
+++ b/lesson8/css/table.css
@@ -6,7 +6,6 @@ body {
 main {
     padding: 10px;
     text-align: center;
-  
 }
 
 section {
@@ -22,9 +21,9 @@ caption {
     padding: 0.5rem 1.2rem;
 }
 
-thead {
+thead th{
     background-color:  #628ca6;
-    color: white;
+    color: #fff;
     font-weight: bold;
 }
 
@@ -49,17 +48,11 @@ tbody tr:nth-child(odd) td {
     background-color: #e7f0ed;
 }
 
-.selected {
+.selected{
     background-color:  #628ca6;
-    color: white;
+    color: #fff;
+    font-weight: bold;
 }
-
-
-#friday {
-    font-style: italic;
-}
-
-
 
 tfoot {
     background-color: #7fb9c2;
